deployment/ingress.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  labels:
    app: code-server
  name: code-server
  namespace: code-server
spec: 
  virtualhost:
    fqdn: code.example.com
    tls:
      secretName: code-server
  routes: 
    - match: /
      enableWebsockets: true
      services: 
        - name: code-server 
          port: 80
